WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281650
Fix missing exception check in arrayProtoFuncConcat.
https://bugs.webkit.org/show_bug.cgi?id=281650
Summary
Fix missing exception check in arrayProtoFuncConcat.
Mark Lam
Reported
2024-10-16 22:43:01 PDT
moveArrayElements() can throw. Hence, we need an exception check after it before falling through to setLength().
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-16 22:43:24 PDT
<
rdar://problem/138092131
>
Mark Lam
Comment 2
2024-10-16 22:49:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35346
EWS
Comment 3
2024-10-17 10:06:40 PDT
Committed
285344@main
(1a8f794a74af): <
https://commits.webkit.org/285344@main
> Reviewed commits have been landed. Closing PR #35346 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug