Fix missing exception check in arrayProtoFuncConcat. https://bugs.webkit.org/show_bug.cgi?id=281650 rdar://138092131

Reviewed by Yijia Huang.

moveArrayElements() can throw.  Hence, we need an exception check after it before falling
through to setLength().

This was caught by an internal test.

* Source/JavaScriptCore/runtime/ArrayPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/285344@main